--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -130,8 +130,42 @@ main section{
     box-shadow: 0px 6px 50px 0px rgba(0,0,0,0,06);
 }
 
+/*resume section style*/
+resume-container{
+    display: flex;
+  
+}
 
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.experience-discription, .experience-sub-title{ 
+    color: #757575;
+}
+.resume hr{
+    margin:30px;
+}
+.resume-dpwnload-cv{
+    margin-top: 50px;
+}
+/*footer style*/
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap:100px;
+}
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 54px;
+    background-color: #fff8f3;
+    width: 200px;
 
-
-
-
+   /* width:100%
+    padding:10px 20px;
+    margin-button:24px;
+    border:none;
+}
